fix: remove custom-input class because it breaks the xs view

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -23,7 +23,3 @@
     border-radius: 2px;
   }
 }
-
-.custom-input {
-  min-width: 350px;
-}
